# bmc-cpuinfo

./: CMakeLists.txt  README.md
inc/: cpu_info.hpp
service_files/: xyz.openbmc_project.Inventory.Item.Cpu_info.service
src/: cpu_info.cpp  main.cpp
